<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
    android:layout_marginBottom="10dp">
		
    <com.jumo.tablas.ui.views.RoundImageView
        android:id="@+id/list_contact_image"
        android:layout_width="@dimen/list_group_img_size"
        android:layout_height="@dimen/list_group_img_size"
        android:layout_margin="5dp"
        android:src="@drawable/ic_launcher"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_margin="5dp"
        android:layout_weight="1">

        <TextView android:id="@+id/list_contact_name"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/text_contact_name"
            android:layout_gravity="bottom"/>

        <TextView android:id="@+id/list_contact_tel"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/text_contact_tel"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <TextView android:id="@+id/list_group_balance"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/text_contact_type"/>

</LinearLayout>
