<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <com.jumo.tablas.ui.views.RoundImageView
            android:id="@+id/edit_group_img"
            android:layout_width="@dimen/edit_group_img_size"
            android:layout_height="@dimen/edit_group_img_size"
            android:src="@drawable/ic_launcher" />

        <EditText android:id="@+id/edit_group_name"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:hint="@string/hint_group_name"/>

    </LinearLayout>

    <!-- TODO: Add a CardLayout instead of simple LinearLayout -->

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_members"
            android:layout_marginBottom="10dp"/>

        <SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_contact"
            android:inputType="textPersonName"
            android:queryHint="@string/hint_add_people"
            android:iconifiedByDefault="false"
            android:layout_marginBottom="10dp"/>

        <ListView android:id="@+id/list_added_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>