<?xml version="1.0" encoding="utf-8"?>
<com.jumo.tablas.ui.views.LinearLayoutResize xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view_conversations"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--FrameLayout
        android:id="@+id/fragmentGroupList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/layout_chat_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button_currency"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/ic_menu_compass" />

                <EditText
                    android:id="@+id/edit_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_message"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/text_currency_symbol"/>

                <EditText
                    android:id="@+id/edit_amount"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:hint="@string/hint_amount"/>

            </LinearLayout>

            <!--LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/button_fullEditor"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/ic_menu_edit" />

                <ImageButton
                    android:id="@+id/button_fullEditor"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/ic_menu_edit" />


                <ImageButton
                    android:id="@+id/button_category"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/ic_menu_myplaces" />

                <ImageButton
                    android:id="@+id/button_text"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@android:drawable/ic_menu_sort_alphabetically" />



            </LinearLayout-->

        </LinearLayout>

        <!--FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/button_material_light"-->

        <ImageButton
            android:id="@+id/button_sendExpense"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_send" />

        <!--/FrameLayout-->

    </LinearLayout>


    <FrameLayout
        android:id="@+id/inputMethod"
        android:layout_width="match_parent"
        android:layout_height="@dimen/keyboard_height"
        android:background="@android:color/transparent"
        android:visibility="gone">

        <include layout="@layout/popup_input_methods" />

    </FrameLayout>



</com.jumo.tablas.ui.views.LinearLayoutResize>